# TradeExecution

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
src/: ExecutionEngine.cpp  ExecutionEngine.h  KafkaConsumer.cpp  KafkaConsumer.h  Order.h  TradeRequest.h  TradingMicroservice.cpp  TradingMicroservice.h  main.cpp  serializers.h
